// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`syncApplication should create a TEXT field on the standard Company object 1`] = `
{
  "syncApplication": {
    "actions": [
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "The industry of the company",
          "icon": "IconBuildingFactory2",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": false,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Industry",
          "morphId": null,
          "name": "industry",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "relationTargetFieldMetadataUniversalIdentifier": null,
          "relationTargetObjectMetadataUniversalIdentifier": null,
          "standardOverrides": null,
          "type": "TEXT",
          "universalIdentifier": Any<String>,
          "universalSettings": null,
          "updatedAt": Any<String>,
        },
        "id": Any<String>,
        "metadataName": "fieldMetadata",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "canAccessAllTools": false,
          "canBeAssignedToAgents": true,
          "canBeAssignedToApiKeys": true,
          "canBeAssignedToUsers": true,
          "canDestroyAllObjectRecords": false,
          "canReadAllObjectRecords": false,
          "canSoftDeleteAllObjectRecords": false,
          "canUpdateAllObjectRecords": false,
          "canUpdateAllSettings": false,
          "createdAt": Any<String>,
          "description": "A test role",
          "icon": null,
          "isEditable": true,
          "label": "Test Role",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "role",
        "type": "create",
      },
    ],
    "applicationUniversalIdentifier": Any<String>,
  },
}
`;

exports[`syncApplication should delete old field and create equivalent one when field universalIdentifier changes 1`] = `
{
  "syncApplication": {
    "actions": [
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "color": null,
          "createdAt": Any<String>,
          "description": "A support ticket",
          "duplicateCriteria": null,
          "icon": "IconTicket",
          "imageIdentifierFieldMetadataUniversalIdentifier": null,
          "isActive": true,
          "isAuditLogged": true,
          "isLabelSyncedWithName": false,
          "isRemote": false,
          "isSearchable": true,
          "isSystem": false,
          "isUICreatable": true,
          "isUIEditable": true,
          "labelIdentifierFieldMetadataUniversalIdentifier": Any<String>,
          "labelPlural": "Tickets",
          "labelSingular": "Ticket",
          "namePlural": "tickets",
          "nameSingular": "ticket",
          "shortcut": null,
          "standardOverrides": null,
          "targetTableName": "DEPRECATED",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "objectMetadata",
        "type": "create",
        "universalFlatFieldMetadatas": [
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Id",
            "morphId": null,
            "name": "id",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "UUID",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Creation date",
            "morphId": null,
            "name": "createdAt",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "DATE_TIME",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Last update",
            "morphId": null,
            "name": "updatedAt",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "DATE_TIME",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Deleted at",
            "morphId": null,
            "name": "deletedAt",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "DATE_TIME",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": {
              "context": null,
              "name": "'System'",
              "source": "'MANUAL'",
              "workspaceMemberId": null,
            },
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Created by",
            "morphId": null,
            "name": "createdBy",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "ACTOR",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": {
              "context": null,
              "name": "'System'",
              "source": "'MANUAL'",
              "workspaceMemberId": null,
            },
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Updated by",
            "morphId": null,
            "name": "updatedBy",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "ACTOR",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Position",
            "morphId": null,
            "name": "position",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "POSITION",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Search vector",
            "morphId": null,
            "name": "searchVector",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "TS_VECTOR",
            "universalIdentifier": Any<String>,
            "universalSettings": {
              "asExpression": "to_tsvector('simple', COALESCE("id"::text, ''))",
              "generatedType": "STORED",
            },
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": "Ticket description",
            "icon": "IconFileDescription",
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": false,
            "isSystemSideEffect": false,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Description",
            "morphId": null,
            "name": "description",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "TEXT",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
        ],
      },
      {
        "fieldIdByUniversalIdentifier": Any<Object>,
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Tickets tied to the Timeline Activity",
          "icon": "IconTimelineEvent",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Timeline Activities",
          "morphId": null,
          "name": "timelineActivities",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "relationType": "ONE_TO_MANY",
          },
          "updatedAt": Any<String>,
        },
        "id": Any<String>,
        "metadataName": "fieldMetadata",
        "relatedFieldId": Any<String>,
        "relatedUniversalFlatFieldMetadata": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "TimelineActivities Ticket",
          "icon": "IconTimelineEvent",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Ticket",
          "morphId": Any<String>,
          "name": "targetTicket",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "standardOverrides": null,
          "type": "MORPH_RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "joinColumnName": "targetTicketId",
            "onDelete": "SET_NULL",
            "relationType": "MANY_TO_ONE",
          },
          "updatedAt": Any<String>,
        },
        "type": "create",
      },
      {
        "fieldIdByUniversalIdentifier": Any<Object>,
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Tickets tied to the Attachment",
          "icon": "IconFileImport",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Attachments",
          "morphId": null,
          "name": "attachments",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "relationType": "ONE_TO_MANY",
          },
          "updatedAt": Any<String>,
        },
        "id": Any<String>,
        "metadataName": "fieldMetadata",
        "relatedFieldId": Any<String>,
        "relatedUniversalFlatFieldMetadata": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Attachments Ticket",
          "icon": "IconFileImport",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Ticket",
          "morphId": Any<String>,
          "name": "targetTicket",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "standardOverrides": null,
          "type": "MORPH_RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "joinColumnName": "targetTicketId",
            "onDelete": "SET_NULL",
            "relationType": "MANY_TO_ONE",
          },
          "updatedAt": Any<String>,
        },
        "type": "create",
      },
      {
        "fieldIdByUniversalIdentifier": Any<Object>,
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Tickets tied to the Note Target",
          "icon": "IconNotes",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Notes",
          "morphId": null,
          "name": "noteTargets",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "relationType": "ONE_TO_MANY",
          },
          "updatedAt": Any<String>,
        },
        "id": Any<String>,
        "metadataName": "fieldMetadata",
        "relatedFieldId": Any<String>,
        "relatedUniversalFlatFieldMetadata": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "NoteTargets Ticket",
          "icon": "IconCheckbox",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Ticket",
          "morphId": Any<String>,
          "name": "targetTicket",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "standardOverrides": null,
          "type": "MORPH_RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "joinColumnName": "targetTicketId",
            "onDelete": "SET_NULL",
            "relationType": "MANY_TO_ONE",
          },
          "updatedAt": Any<String>,
        },
        "type": "create",
      },
      {
        "fieldIdByUniversalIdentifier": Any<Object>,
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Tickets tied to the Task Target",
          "icon": "IconCheckbox",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Tasks",
          "morphId": null,
          "name": "taskTargets",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "relationType": "ONE_TO_MANY",
          },
          "updatedAt": Any<String>,
        },
        "id": Any<String>,
        "metadataName": "fieldMetadata",
        "relatedFieldId": Any<String>,
        "relatedUniversalFlatFieldMetadata": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "TaskTargets Ticket",
          "icon": "IconCheckbox",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Ticket",
          "morphId": Any<String>,
          "name": "targetTicket",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "standardOverrides": null,
          "type": "MORPH_RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "joinColumnName": "targetTicketId",
            "onDelete": "SET_NULL",
            "relationType": "MANY_TO_ONE",
          },
          "updatedAt": Any<String>,
        },
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "indexType": "GIN",
          "indexWhereClause": null,
          "isCustom": false,
          "isSystemSideEffect": true,
          "isUnique": false,
          "name": "IDX_72b74c26016bcd3cd20b85c4a28",
          "objectMetadataUniversalIdentifier": Any<String>,
          "universalFlatIndexFieldMetadatas": [
            {
              "createdAt": Any<String>,
              "fieldMetadataUniversalIdentifier": Any<String>,
              "indexMetadataUniversalIdentifier": Any<String>,
              "order": 0,
              "subFieldName": null,
              "updatedAt": Any<String>,
            },
          ],
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "index",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "indexType": "BTREE",
          "indexWhereClause": null,
          "isCustom": true,
          "isSystemSideEffect": true,
          "isUnique": false,
          "name": "IDX_8da02734dc044074a6a2c224f2a",
          "objectMetadataUniversalIdentifier": Any<String>,
          "universalFlatIndexFieldMetadatas": [
            {
              "createdAt": Any<String>,
              "fieldMetadataUniversalIdentifier": Any<String>,
              "indexMetadataUniversalIdentifier": Any<String>,
              "order": 0,
              "subFieldName": null,
              "updatedAt": Any<String>,
            },
          ],
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "index",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "indexType": "BTREE",
          "indexWhereClause": null,
          "isCustom": true,
          "isSystemSideEffect": true,
          "isUnique": false,
          "name": "IDX_890a5ffa99e9b995803d50f2298",
          "objectMetadataUniversalIdentifier": Any<String>,
          "universalFlatIndexFieldMetadatas": [
            {
              "createdAt": Any<String>,
              "fieldMetadataUniversalIdentifier": Any<String>,
              "indexMetadataUniversalIdentifier": Any<String>,
              "order": 0,
              "subFieldName": null,
              "updatedAt": Any<String>,
            },
          ],
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "index",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "indexType": "BTREE",
          "indexWhereClause": null,
          "isCustom": true,
          "isSystemSideEffect": true,
          "isUnique": false,
          "name": "IDX_d2022a25ca76206ddf16d88efd5",
          "objectMetadataUniversalIdentifier": Any<String>,
          "universalFlatIndexFieldMetadatas": [
            {
              "createdAt": Any<String>,
              "fieldMetadataUniversalIdentifier": Any<String>,
              "indexMetadataUniversalIdentifier": Any<String>,
              "order": 0,
              "subFieldName": null,
              "updatedAt": Any<String>,
            },
          ],
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "index",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "indexType": "BTREE",
          "indexWhereClause": null,
          "isCustom": true,
          "isSystemSideEffect": true,
          "isUnique": false,
          "name": "IDX_7d7a4e9e0805030aee982fdfa31",
          "objectMetadataUniversalIdentifier": Any<String>,
          "universalFlatIndexFieldMetadatas": [
            {
              "createdAt": Any<String>,
              "fieldMetadataUniversalIdentifier": Any<String>,
              "indexMetadataUniversalIdentifier": Any<String>,
              "order": 0,
              "subFieldName": null,
              "updatedAt": Any<String>,
            },
          ],
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "index",
        "type": "create",
      },
      {
        "flatEntity": {
          "anyFieldFilterValue": null,
          "applicationUniversalIdentifier": Any<String>,
          "calendarFieldMetadataUniversalIdentifier": null,
          "calendarLayout": null,
          "createdAt": Any<String>,
          "createdByUserWorkspaceId": null,
          "deletedAt": null,
          "icon": "IconList",
          "id": Any<String>,
          "isActive": true,
          "isCompact": false,
          "isCustom": true,
          "isSystemSideEffect": true,
          "kanbanAggregateOperation": null,
          "kanbanAggregateOperationFieldMetadataUniversalIdentifier": null,
          "kanbanColumnWidth": null,
          "key": "INDEX",
          "mainGroupByFieldMetadataUniversalIdentifier": null,
          "name": "All {objectLabelPlural}",
          "objectMetadataUniversalIdentifier": Any<String>,
          "openRecordIn": "SIDE_PANEL",
          "position": 0,
          "shouldHideEmptyGroups": false,
          "type": "TABLE",
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
          "visibility": "WORKSPACE",
        },
        "metadataName": "view",
        "type": "create",
      },
      {
        "flatEntity": {
          "anyFieldFilterValue": null,
          "applicationUniversalIdentifier": Any<String>,
          "calendarFieldMetadataUniversalIdentifier": null,
          "calendarLayout": null,
          "createdAt": Any<String>,
          "createdByUserWorkspaceId": null,
          "deletedAt": null,
          "icon": "IconList",
          "id": Any<String>,
          "isActive": true,
          "isCompact": false,
          "isCustom": true,
          "isSystemSideEffect": true,
          "kanbanAggregateOperation": null,
          "kanbanAggregateOperationFieldMetadataUniversalIdentifier": null,
          "kanbanColumnWidth": null,
          "key": null,
          "mainGroupByFieldMetadataUniversalIdentifier": null,
          "name": "Ticket Record Page Fields",
          "objectMetadataUniversalIdentifier": Any<String>,
          "openRecordIn": "SIDE_PANEL",
          "position": 0,
          "shouldHideEmptyGroups": false,
          "type": "FIELDS_WIDGET",
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
          "visibility": "WORKSPACE",
        },
        "metadataName": "view",
        "type": "create",
      },
      {
        "flatEntity": {
          "aggregateOperation": null,
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "fieldMetadataUniversalIdentifier": Any<String>,
          "isActive": true,
          "isSystemSideEffect": true,
          "isVisible": true,
          "position": 0,
          "size": 180,
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
          "viewFieldGroupUniversalIdentifier": null,
          "viewUniversalIdentifier": Any<String>,
        },
        "metadataName": "viewField",
        "type": "create",
      },
      {
        "flatEntity": {
          "aggregateOperation": null,
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "fieldMetadataUniversalIdentifier": Any<String>,
          "isActive": true,
          "isSystemSideEffect": true,
          "isVisible": true,
          "position": 1,
          "size": 180,
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
          "viewFieldGroupUniversalIdentifier": null,
          "viewUniversalIdentifier": Any<String>,
        },
        "metadataName": "viewField",
        "type": "create",
      },
      {
        "flatEntity": {
          "aggregateOperation": null,
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "fieldMetadataUniversalIdentifier": Any<String>,
          "isActive": true,
          "isSystemSideEffect": true,
          "isVisible": true,
          "position": 2,
          "size": 180,
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
          "viewFieldGroupUniversalIdentifier": null,
          "viewUniversalIdentifier": Any<String>,
        },
        "metadataName": "viewField",
        "type": "create",
      },
      {
        "flatEntity": {
          "aggregateOperation": null,
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "fieldMetadataUniversalIdentifier": Any<String>,
          "isActive": true,
          "isSystemSideEffect": true,
          "isVisible": true,
          "position": 3,
          "size": 180,
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
          "viewFieldGroupUniversalIdentifier": null,
          "viewUniversalIdentifier": Any<String>,
        },
        "metadataName": "viewField",
        "type": "create",
      },
      {
        "flatEntity": {
          "aggregateOperation": null,
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "fieldMetadataUniversalIdentifier": Any<String>,
          "isActive": true,
          "isSystemSideEffect": true,
          "isVisible": true,
          "position": 4,
          "size": 180,
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
          "viewFieldGroupUniversalIdentifier": null,
          "viewUniversalIdentifier": Any<String>,
        },
        "metadataName": "viewField",
        "type": "create",
      },
      {
        "flatEntity": {
          "aggregateOperation": null,
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "fieldMetadataUniversalIdentifier": Any<String>,
          "isActive": true,
          "isSystemSideEffect": true,
          "isVisible": true,
          "position": 5,
          "size": 180,
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
          "viewFieldGroupUniversalIdentifier": null,
          "viewUniversalIdentifier": Any<String>,
        },
        "metadataName": "viewField",
        "type": "create",
      },
      {
        "flatEntity": {
          "aggregateOperation": null,
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "fieldMetadataUniversalIdentifier": Any<String>,
          "isActive": true,
          "isSystemSideEffect": true,
          "isVisible": true,
          "position": 0,
          "size": 180,
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
          "viewFieldGroupUniversalIdentifier": null,
          "viewUniversalIdentifier": Any<String>,
        },
        "metadataName": "viewField",
        "type": "create",
      },
      {
        "flatEntity": {
          "aggregateOperation": null,
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "fieldMetadataUniversalIdentifier": Any<String>,
          "isActive": true,
          "isSystemSideEffect": true,
          "isVisible": true,
          "position": 1,
          "size": 180,
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
          "viewFieldGroupUniversalIdentifier": null,
          "viewUniversalIdentifier": Any<String>,
        },
        "metadataName": "viewField",
        "type": "create",
      },
      {
        "flatEntity": {
          "aggregateOperation": null,
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "fieldMetadataUniversalIdentifier": Any<String>,
          "isActive": true,
          "isSystemSideEffect": true,
          "isVisible": true,
          "position": 2,
          "size": 180,
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
          "viewFieldGroupUniversalIdentifier": null,
          "viewUniversalIdentifier": Any<String>,
        },
        "metadataName": "viewField",
        "type": "create",
      },
      {
        "flatEntity": {
          "aggregateOperation": null,
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "fieldMetadataUniversalIdentifier": Any<String>,
          "isActive": true,
          "isSystemSideEffect": true,
          "isVisible": true,
          "position": 3,
          "size": 180,
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
          "viewFieldGroupUniversalIdentifier": null,
          "viewUniversalIdentifier": Any<String>,
        },
        "metadataName": "viewField",
        "type": "create",
      },
      {
        "flatEntity": {
          "aggregateOperation": null,
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "fieldMetadataUniversalIdentifier": Any<String>,
          "isActive": true,
          "isSystemSideEffect": true,
          "isVisible": true,
          "position": 4,
          "size": 180,
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
          "viewFieldGroupUniversalIdentifier": null,
          "viewUniversalIdentifier": Any<String>,
        },
        "metadataName": "viewField",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "canAccessAllTools": false,
          "canBeAssignedToAgents": true,
          "canBeAssignedToApiKeys": true,
          "canBeAssignedToUsers": true,
          "canDestroyAllObjectRecords": false,
          "canReadAllObjectRecords": false,
          "canSoftDeleteAllObjectRecords": false,
          "canUpdateAllObjectRecords": false,
          "canUpdateAllSettings": false,
          "createdAt": Any<String>,
          "description": "A test role",
          "icon": null,
          "isEditable": true,
          "label": "Test Role",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "role",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultTabToFocusOnMobileAndSidePanelUniversalIdentifier": null,
          "deletedAt": null,
          "isSystemSideEffect": true,
          "name": "Default Ticket Layout",
          "objectMetadataUniversalIdentifier": Any<String>,
          "type": "RECORD_PAGE",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "pageLayout",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "icon": "IconHome",
          "isActive": true,
          "isSystemSideEffect": true,
          "layoutMode": "VERTICAL_LIST",
          "overrides": null,
          "pageLayoutUniversalIdentifier": Any<String>,
          "position": 10,
          "title": "Home",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "pageLayoutTab",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "icon": "IconTimelineEvent",
          "isActive": true,
          "isSystemSideEffect": true,
          "layoutMode": "CANVAS",
          "overrides": null,
          "pageLayoutUniversalIdentifier": Any<String>,
          "position": 20,
          "title": "Timeline",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "pageLayoutTab",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "icon": "IconCheckbox",
          "isActive": true,
          "isSystemSideEffect": true,
          "layoutMode": "CANVAS",
          "overrides": null,
          "pageLayoutUniversalIdentifier": Any<String>,
          "position": 30,
          "title": "Tasks",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "pageLayoutTab",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "icon": "IconNotes",
          "isActive": true,
          "isSystemSideEffect": true,
          "layoutMode": "CANVAS",
          "overrides": null,
          "pageLayoutUniversalIdentifier": Any<String>,
          "position": 40,
          "title": "Notes",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "pageLayoutTab",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "icon": "IconPaperclip",
          "isActive": true,
          "isSystemSideEffect": true,
          "layoutMode": "CANVAS",
          "overrides": null,
          "pageLayoutUniversalIdentifier": Any<String>,
          "position": 50,
          "title": "Files",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "pageLayoutTab",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "conditionalAvailabilityExpression": null,
          "conditionalDisplay": null,
          "createdAt": Any<String>,
          "deletedAt": null,
          "gridPosition": {
            "column": 0,
            "columnSpan": 12,
            "row": 0,
            "rowSpan": 12,
          },
          "isActive": true,
          "isSystemSideEffect": true,
          "objectMetadataUniversalIdentifier": Any<String>,
          "pageLayoutTabUniversalIdentifier": Any<String>,
          "position": {
            "index": 0,
            "layoutMode": "VERTICAL_LIST",
          },
          "title": "Fields",
          "type": "FIELDS",
          "universalConfiguration": {
            "configurationType": "FIELDS",
            "newFieldDefaultVisibility": true,
            "viewUniversalIdentifier": Any<String>,
          },
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
        },
        "metadataName": "pageLayoutWidget",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "conditionalAvailabilityExpression": null,
          "conditionalDisplay": null,
          "createdAt": Any<String>,
          "deletedAt": null,
          "gridPosition": {
            "column": 0,
            "columnSpan": 12,
            "row": 0,
            "rowSpan": 6,
          },
          "isActive": true,
          "isSystemSideEffect": true,
          "objectMetadataUniversalIdentifier": Any<String>,
          "pageLayoutTabUniversalIdentifier": Any<String>,
          "position": {
            "layoutMode": "CANVAS",
          },
          "title": "Timeline",
          "type": "TIMELINE",
          "universalConfiguration": {
            "configurationType": "TIMELINE",
          },
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
        },
        "metadataName": "pageLayoutWidget",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "conditionalAvailabilityExpression": null,
          "conditionalDisplay": null,
          "createdAt": Any<String>,
          "deletedAt": null,
          "gridPosition": {
            "column": 0,
            "columnSpan": 12,
            "row": 0,
            "rowSpan": 6,
          },
          "isActive": true,
          "isSystemSideEffect": true,
          "objectMetadataUniversalIdentifier": Any<String>,
          "pageLayoutTabUniversalIdentifier": Any<String>,
          "position": {
            "layoutMode": "CANVAS",
          },
          "title": "Tasks",
          "type": "TASKS",
          "universalConfiguration": {
            "configurationType": "TASKS",
          },
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
        },
        "metadataName": "pageLayoutWidget",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "conditionalAvailabilityExpression": null,
          "conditionalDisplay": null,
          "createdAt": Any<String>,
          "deletedAt": null,
          "gridPosition": {
            "column": 0,
            "columnSpan": 12,
            "row": 0,
            "rowSpan": 6,
          },
          "isActive": true,
          "isSystemSideEffect": true,
          "objectMetadataUniversalIdentifier": Any<String>,
          "pageLayoutTabUniversalIdentifier": Any<String>,
          "position": {
            "layoutMode": "CANVAS",
          },
          "title": "Notes",
          "type": "NOTES",
          "universalConfiguration": {
            "configurationType": "NOTES",
          },
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
        },
        "metadataName": "pageLayoutWidget",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "conditionalAvailabilityExpression": null,
          "conditionalDisplay": null,
          "createdAt": Any<String>,
          "deletedAt": null,
          "gridPosition": {
            "column": 0,
            "columnSpan": 12,
            "row": 0,
            "rowSpan": 6,
          },
          "isActive": true,
          "isSystemSideEffect": true,
          "objectMetadataUniversalIdentifier": Any<String>,
          "pageLayoutTabUniversalIdentifier": Any<String>,
          "position": {
            "layoutMode": "CANVAS",
          },
          "title": "Files",
          "type": "FILES",
          "universalConfiguration": {
            "configurationType": "FILES",
          },
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
        },
        "metadataName": "pageLayoutWidget",
        "type": "create",
      },
    ],
    "applicationUniversalIdentifier": Any<String>,
  },
}
`;

exports[`syncApplication should delete old field and create equivalent one when field universalIdentifier changes 2`] = `
{
  "syncApplication": {
    "actions": [
      {
        "flatEntity": {
          "applicationId": Any<String>,
          "applicationUniversalIdentifier": Any<String>,
          "calendarViewIds": [],
          "calendarViewUniversalIdentifiers": [],
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Ticket description",
          "fieldPermissionIds": [],
          "fieldPermissionUniversalIdentifiers": [],
          "icon": "IconFileDescription",
          "id": Any<String>,
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": false,
          "isUIEditable": true,
          "isUnique": false,
          "kanbanAggregateOperationViewIds": [],
          "kanbanAggregateOperationViewUniversalIdentifiers": [],
          "label": "Description",
          "mainGroupByFieldMetadataViewIds": [],
          "mainGroupByFieldMetadataViewUniversalIdentifiers": [],
          "morphId": null,
          "name": "description",
          "objectMetadataId": Any<String>,
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetFieldMetadataUniversalIdentifier": null,
          "relationTargetObjectMetadataId": null,
          "relationTargetObjectMetadataUniversalIdentifier": null,
          "settings": null,
          "standardOverrides": null,
          "type": "TEXT",
          "universalIdentifier": Any<String>,
          "universalSettings": null,
          "updatedAt": Any<String>,
          "viewFieldIds": [
            Any<String>,
            Any<String>,
          ],
          "viewFieldUniversalIdentifiers": [
            Any<String>,
            Any<String>,
          ],
          "viewFilterIds": [],
          "viewFilterUniversalIdentifiers": [],
          "viewSortIds": [],
          "viewSortUniversalIdentifiers": [],
          "workspaceId": Any<String>,
        },
        "metadataName": "fieldMetadata",
        "type": "delete",
        "universalIdentifier": Any<String>,
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Ticket description",
          "icon": "IconFileDescription",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": false,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Description",
          "morphId": null,
          "name": "description",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "relationTargetFieldMetadataUniversalIdentifier": null,
          "relationTargetObjectMetadataUniversalIdentifier": null,
          "standardOverrides": null,
          "type": "TEXT",
          "universalIdentifier": Any<String>,
          "universalSettings": null,
          "updatedAt": Any<String>,
        },
        "id": Any<String>,
        "metadataName": "fieldMetadata",
        "type": "create",
      },
      {
        "flatEntity": {
          "aggregateOperation": null,
          "applicationId": Any<String>,
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "fieldMetadataId": Any<String>,
          "fieldMetadataUniversalIdentifier": Any<String>,
          "id": Any<String>,
          "isActive": true,
          "isSystemSideEffect": true,
          "isVisible": true,
          "overrides": null,
          "position": 5,
          "size": 180,
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
          "viewFieldGroupId": null,
          "viewFieldGroupUniversalIdentifier": null,
          "viewId": Any<String>,
          "viewUniversalIdentifier": Any<String>,
          "workspaceId": Any<String>,
        },
        "metadataName": "viewField",
        "type": "delete",
        "universalIdentifier": Any<String>,
      },
      {
        "flatEntity": {
          "aggregateOperation": null,
          "applicationId": Any<String>,
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "fieldMetadataId": Any<String>,
          "fieldMetadataUniversalIdentifier": Any<String>,
          "id": Any<String>,
          "isActive": true,
          "isSystemSideEffect": true,
          "isVisible": true,
          "overrides": null,
          "position": 4,
          "size": 180,
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
          "viewFieldGroupId": null,
          "viewFieldGroupUniversalIdentifier": null,
          "viewId": Any<String>,
          "viewUniversalIdentifier": Any<String>,
          "workspaceId": Any<String>,
        },
        "metadataName": "viewField",
        "type": "delete",
        "universalIdentifier": Any<String>,
      },
      {
        "flatEntity": {
          "aggregateOperation": null,
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "fieldMetadataUniversalIdentifier": Any<String>,
          "isActive": true,
          "isSystemSideEffect": true,
          "isVisible": true,
          "position": 5,
          "size": 180,
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
          "viewFieldGroupUniversalIdentifier": null,
          "viewUniversalIdentifier": Any<String>,
        },
        "metadataName": "viewField",
        "type": "create",
      },
      {
        "flatEntity": {
          "aggregateOperation": null,
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "fieldMetadataUniversalIdentifier": Any<String>,
          "isActive": true,
          "isSystemSideEffect": true,
          "isVisible": true,
          "position": 4,
          "size": 180,
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
          "viewFieldGroupUniversalIdentifier": null,
          "viewUniversalIdentifier": Any<String>,
        },
        "metadataName": "viewField",
        "type": "create",
      },
    ],
    "applicationUniversalIdentifier": Any<String>,
  },
}
`;

exports[`syncApplication should return workspace migration actions on initial sync then on second sync with field rename and new role 1`] = `
{
  "syncApplication": {
    "actions": [
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "color": null,
          "createdAt": Any<String>,
          "description": "A support ticket",
          "duplicateCriteria": null,
          "icon": "IconTicket",
          "imageIdentifierFieldMetadataUniversalIdentifier": null,
          "isActive": true,
          "isAuditLogged": true,
          "isLabelSyncedWithName": false,
          "isRemote": false,
          "isSearchable": true,
          "isSystem": false,
          "isUICreatable": true,
          "isUIEditable": true,
          "labelIdentifierFieldMetadataUniversalIdentifier": Any<String>,
          "labelPlural": "Tickets",
          "labelSingular": "Ticket",
          "namePlural": "tickets",
          "nameSingular": "ticket",
          "shortcut": null,
          "standardOverrides": null,
          "targetTableName": "DEPRECATED",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "objectMetadata",
        "type": "create",
        "universalFlatFieldMetadatas": [
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Id",
            "morphId": null,
            "name": "id",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "UUID",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Creation date",
            "morphId": null,
            "name": "createdAt",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "DATE_TIME",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Last update",
            "morphId": null,
            "name": "updatedAt",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "DATE_TIME",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Deleted at",
            "morphId": null,
            "name": "deletedAt",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "DATE_TIME",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": {
              "context": null,
              "name": "'System'",
              "source": "'MANUAL'",
              "workspaceMemberId": null,
            },
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Created by",
            "morphId": null,
            "name": "createdBy",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "ACTOR",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": {
              "context": null,
              "name": "'System'",
              "source": "'MANUAL'",
              "workspaceMemberId": null,
            },
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Updated by",
            "morphId": null,
            "name": "updatedBy",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "ACTOR",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Position",
            "morphId": null,
            "name": "position",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "POSITION",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": null,
            "icon": null,
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isSystemSideEffect": true,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Search vector",
            "morphId": null,
            "name": "searchVector",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "TS_VECTOR",
            "universalIdentifier": Any<String>,
            "universalSettings": {
              "asExpression": "to_tsvector('simple', COALESCE("id"::text, ''))",
              "generatedType": "STORED",
            },
            "updatedAt": Any<String>,
          },
          {
            "applicationUniversalIdentifier": Any<String>,
            "createdAt": Any<String>,
            "defaultValue": null,
            "description": "Ticket description",
            "icon": "IconFileDescription",
            "isActive": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": false,
            "isSystemSideEffect": false,
            "isUIEditable": true,
            "isUnique": false,
            "label": "Description",
            "morphId": null,
            "name": "description",
            "objectMetadataUniversalIdentifier": Any<String>,
            "options": null,
            "relationTargetFieldMetadataUniversalIdentifier": null,
            "relationTargetObjectMetadataUniversalIdentifier": null,
            "standardOverrides": null,
            "type": "TEXT",
            "universalIdentifier": Any<String>,
            "universalSettings": null,
            "updatedAt": Any<String>,
          },
        ],
      },
      {
        "fieldIdByUniversalIdentifier": Any<Object>,
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Tickets tied to the Timeline Activity",
          "icon": "IconTimelineEvent",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Timeline Activities",
          "morphId": null,
          "name": "timelineActivities",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "relationType": "ONE_TO_MANY",
          },
          "updatedAt": Any<String>,
        },
        "id": Any<String>,
        "metadataName": "fieldMetadata",
        "relatedFieldId": Any<String>,
        "relatedUniversalFlatFieldMetadata": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "TimelineActivities Ticket",
          "icon": "IconTimelineEvent",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Ticket",
          "morphId": Any<String>,
          "name": "targetTicket",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "standardOverrides": null,
          "type": "MORPH_RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "joinColumnName": "targetTicketId",
            "onDelete": "SET_NULL",
            "relationType": "MANY_TO_ONE",
          },
          "updatedAt": Any<String>,
        },
        "type": "create",
      },
      {
        "fieldIdByUniversalIdentifier": Any<Object>,
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Tickets tied to the Attachment",
          "icon": "IconFileImport",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Attachments",
          "morphId": null,
          "name": "attachments",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "relationType": "ONE_TO_MANY",
          },
          "updatedAt": Any<String>,
        },
        "id": Any<String>,
        "metadataName": "fieldMetadata",
        "relatedFieldId": Any<String>,
        "relatedUniversalFlatFieldMetadata": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Attachments Ticket",
          "icon": "IconFileImport",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Ticket",
          "morphId": Any<String>,
          "name": "targetTicket",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "standardOverrides": null,
          "type": "MORPH_RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "joinColumnName": "targetTicketId",
            "onDelete": "SET_NULL",
            "relationType": "MANY_TO_ONE",
          },
          "updatedAt": Any<String>,
        },
        "type": "create",
      },
      {
        "fieldIdByUniversalIdentifier": Any<Object>,
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Tickets tied to the Note Target",
          "icon": "IconNotes",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Notes",
          "morphId": null,
          "name": "noteTargets",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "relationType": "ONE_TO_MANY",
          },
          "updatedAt": Any<String>,
        },
        "id": Any<String>,
        "metadataName": "fieldMetadata",
        "relatedFieldId": Any<String>,
        "relatedUniversalFlatFieldMetadata": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "NoteTargets Ticket",
          "icon": "IconCheckbox",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Ticket",
          "morphId": Any<String>,
          "name": "targetTicket",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "standardOverrides": null,
          "type": "MORPH_RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "joinColumnName": "targetTicketId",
            "onDelete": "SET_NULL",
            "relationType": "MANY_TO_ONE",
          },
          "updatedAt": Any<String>,
        },
        "type": "create",
      },
      {
        "fieldIdByUniversalIdentifier": Any<Object>,
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "Tickets tied to the Task Target",
          "icon": "IconCheckbox",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Tasks",
          "morphId": null,
          "name": "taskTargets",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "relationType": "ONE_TO_MANY",
          },
          "updatedAt": Any<String>,
        },
        "id": Any<String>,
        "metadataName": "fieldMetadata",
        "relatedFieldId": Any<String>,
        "relatedUniversalFlatFieldMetadata": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultValue": null,
          "description": "TaskTargets Ticket",
          "icon": "IconCheckbox",
          "isActive": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isSystemSideEffect": true,
          "isUIEditable": true,
          "isUnique": false,
          "label": "Ticket",
          "morphId": Any<String>,
          "name": "targetTicket",
          "objectMetadataUniversalIdentifier": Any<String>,
          "options": null,
          "relationTargetFieldMetadataUniversalIdentifier": Any<String>,
          "relationTargetObjectMetadataUniversalIdentifier": Any<String>,
          "standardOverrides": null,
          "type": "MORPH_RELATION",
          "universalIdentifier": Any<String>,
          "universalSettings": {
            "joinColumnName": "targetTicketId",
            "onDelete": "SET_NULL",
            "relationType": "MANY_TO_ONE",
          },
          "updatedAt": Any<String>,
        },
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "indexType": "GIN",
          "indexWhereClause": null,
          "isCustom": false,
          "isSystemSideEffect": true,
          "isUnique": false,
          "name": "IDX_72b74c26016bcd3cd20b85c4a28",
          "objectMetadataUniversalIdentifier": Any<String>,
          "universalFlatIndexFieldMetadatas": [
            {
              "createdAt": Any<String>,
              "fieldMetadataUniversalIdentifier": Any<String>,
              "indexMetadataUniversalIdentifier": Any<String>,
              "order": 0,
              "subFieldName": null,
              "updatedAt": Any<String>,
            },
          ],
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "index",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "indexType": "BTREE",
          "indexWhereClause": null,
          "isCustom": true,
          "isSystemSideEffect": true,
          "isUnique": false,
          "name": "IDX_8da02734dc044074a6a2c224f2a",
          "objectMetadataUniversalIdentifier": Any<String>,
          "universalFlatIndexFieldMetadatas": [
            {
              "createdAt": Any<String>,
              "fieldMetadataUniversalIdentifier": Any<String>,
              "indexMetadataUniversalIdentifier": Any<String>,
              "order": 0,
              "subFieldName": null,
              "updatedAt": Any<String>,
            },
          ],
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "index",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "indexType": "BTREE",
          "indexWhereClause": null,
          "isCustom": true,
          "isSystemSideEffect": true,
          "isUnique": false,
          "name": "IDX_890a5ffa99e9b995803d50f2298",
          "objectMetadataUniversalIdentifier": Any<String>,
          "universalFlatIndexFieldMetadatas": [
            {
              "createdAt": Any<String>,
              "fieldMetadataUniversalIdentifier": Any<String>,
              "indexMetadataUniversalIdentifier": Any<String>,
              "order": 0,
              "subFieldName": null,
              "updatedAt": Any<String>,
            },
          ],
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "index",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "indexType": "BTREE",
          "indexWhereClause": null,
          "isCustom": true,
          "isSystemSideEffect": true,
          "isUnique": false,
          "name": "IDX_d2022a25ca76206ddf16d88efd5",
          "objectMetadataUniversalIdentifier": Any<String>,
          "universalFlatIndexFieldMetadatas": [
            {
              "createdAt": Any<String>,
              "fieldMetadataUniversalIdentifier": Any<String>,
              "indexMetadataUniversalIdentifier": Any<String>,
              "order": 0,
              "subFieldName": null,
              "updatedAt": Any<String>,
            },
          ],
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "index",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "indexType": "BTREE",
          "indexWhereClause": null,
          "isCustom": true,
          "isSystemSideEffect": true,
          "isUnique": false,
          "name": "IDX_7d7a4e9e0805030aee982fdfa31",
          "objectMetadataUniversalIdentifier": Any<String>,
          "universalFlatIndexFieldMetadatas": [
            {
              "createdAt": Any<String>,
              "fieldMetadataUniversalIdentifier": Any<String>,
              "indexMetadataUniversalIdentifier": Any<String>,
              "order": 0,
              "subFieldName": null,
              "updatedAt": Any<String>,
            },
          ],
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "index",
        "type": "create",
      },
      {
        "flatEntity": {
          "anyFieldFilterValue": null,
          "applicationUniversalIdentifier": Any<String>,
          "calendarFieldMetadataUniversalIdentifier": null,
          "calendarLayout": null,
          "createdAt": Any<String>,
          "createdByUserWorkspaceId": null,
          "deletedAt": null,
          "icon": "IconList",
          "id": Any<String>,
          "isActive": true,
          "isCompact": false,
          "isCustom": true,
          "isSystemSideEffect": true,
          "kanbanAggregateOperation": null,
          "kanbanAggregateOperationFieldMetadataUniversalIdentifier": null,
          "kanbanColumnWidth": null,
          "key": "INDEX",
          "mainGroupByFieldMetadataUniversalIdentifier": null,
          "name": "All {objectLabelPlural}",
          "objectMetadataUniversalIdentifier": Any<String>,
          "openRecordIn": "SIDE_PANEL",
          "position": 0,
          "shouldHideEmptyGroups": false,
          "type": "TABLE",
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
          "visibility": "WORKSPACE",
        },
        "metadataName": "view",
        "type": "create",
      },
      {
        "flatEntity": {
          "anyFieldFilterValue": null,
          "applicationUniversalIdentifier": Any<String>,
          "calendarFieldMetadataUniversalIdentifier": null,
          "calendarLayout": null,
          "createdAt": Any<String>,
          "createdByUserWorkspaceId": null,
          "deletedAt": null,
          "icon": "IconList",
          "id": Any<String>,
          "isActive": true,
          "isCompact": false,
          "isCustom": true,
          "isSystemSideEffect": true,
          "kanbanAggregateOperation": null,
          "kanbanAggregateOperationFieldMetadataUniversalIdentifier": null,
          "kanbanColumnWidth": null,
          "key": null,
          "mainGroupByFieldMetadataUniversalIdentifier": null,
          "name": "Ticket Record Page Fields",
          "objectMetadataUniversalIdentifier": Any<String>,
          "openRecordIn": "SIDE_PANEL",
          "position": 0,
          "shouldHideEmptyGroups": false,
          "type": "FIELDS_WIDGET",
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
          "visibility": "WORKSPACE",
        },
        "metadataName": "view",
        "type": "create",
      },
      {
        "flatEntity": {
          "aggregateOperation": null,
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "fieldMetadataUniversalIdentifier": Any<String>,
          "isActive": true,
          "isSystemSideEffect": true,
          "isVisible": true,
          "position": 0,
          "size": 180,
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
          "viewFieldGroupUniversalIdentifier": null,
          "viewUniversalIdentifier": Any<String>,
        },
        "metadataName": "viewField",
        "type": "create",
      },
      {
        "flatEntity": {
          "aggregateOperation": null,
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "fieldMetadataUniversalIdentifier": Any<String>,
          "isActive": true,
          "isSystemSideEffect": true,
          "isVisible": true,
          "position": 1,
          "size": 180,
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
          "viewFieldGroupUniversalIdentifier": null,
          "viewUniversalIdentifier": Any<String>,
        },
        "metadataName": "viewField",
        "type": "create",
      },
      {
        "flatEntity": {
          "aggregateOperation": null,
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "fieldMetadataUniversalIdentifier": Any<String>,
          "isActive": true,
          "isSystemSideEffect": true,
          "isVisible": true,
          "position": 2,
          "size": 180,
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
          "viewFieldGroupUniversalIdentifier": null,
          "viewUniversalIdentifier": Any<String>,
        },
        "metadataName": "viewField",
        "type": "create",
      },
      {
        "flatEntity": {
          "aggregateOperation": null,
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "fieldMetadataUniversalIdentifier": Any<String>,
          "isActive": true,
          "isSystemSideEffect": true,
          "isVisible": true,
          "position": 3,
          "size": 180,
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
          "viewFieldGroupUniversalIdentifier": null,
          "viewUniversalIdentifier": Any<String>,
        },
        "metadataName": "viewField",
        "type": "create",
      },
      {
        "flatEntity": {
          "aggregateOperation": null,
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "fieldMetadataUniversalIdentifier": Any<String>,
          "isActive": true,
          "isSystemSideEffect": true,
          "isVisible": true,
          "position": 4,
          "size": 180,
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
          "viewFieldGroupUniversalIdentifier": null,
          "viewUniversalIdentifier": Any<String>,
        },
        "metadataName": "viewField",
        "type": "create",
      },
      {
        "flatEntity": {
          "aggregateOperation": null,
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "fieldMetadataUniversalIdentifier": Any<String>,
          "isActive": true,
          "isSystemSideEffect": true,
          "isVisible": true,
          "position": 5,
          "size": 180,
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
          "viewFieldGroupUniversalIdentifier": null,
          "viewUniversalIdentifier": Any<String>,
        },
        "metadataName": "viewField",
        "type": "create",
      },
      {
        "flatEntity": {
          "aggregateOperation": null,
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "fieldMetadataUniversalIdentifier": Any<String>,
          "isActive": true,
          "isSystemSideEffect": true,
          "isVisible": true,
          "position": 0,
          "size": 180,
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
          "viewFieldGroupUniversalIdentifier": null,
          "viewUniversalIdentifier": Any<String>,
        },
        "metadataName": "viewField",
        "type": "create",
      },
      {
        "flatEntity": {
          "aggregateOperation": null,
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "fieldMetadataUniversalIdentifier": Any<String>,
          "isActive": true,
          "isSystemSideEffect": true,
          "isVisible": true,
          "position": 1,
          "size": 180,
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
          "viewFieldGroupUniversalIdentifier": null,
          "viewUniversalIdentifier": Any<String>,
        },
        "metadataName": "viewField",
        "type": "create",
      },
      {
        "flatEntity": {
          "aggregateOperation": null,
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "fieldMetadataUniversalIdentifier": Any<String>,
          "isActive": true,
          "isSystemSideEffect": true,
          "isVisible": true,
          "position": 2,
          "size": 180,
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
          "viewFieldGroupUniversalIdentifier": null,
          "viewUniversalIdentifier": Any<String>,
        },
        "metadataName": "viewField",
        "type": "create",
      },
      {
        "flatEntity": {
          "aggregateOperation": null,
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "fieldMetadataUniversalIdentifier": Any<String>,
          "isActive": true,
          "isSystemSideEffect": true,
          "isVisible": true,
          "position": 3,
          "size": 180,
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
          "viewFieldGroupUniversalIdentifier": null,
          "viewUniversalIdentifier": Any<String>,
        },
        "metadataName": "viewField",
        "type": "create",
      },
      {
        "flatEntity": {
          "aggregateOperation": null,
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "fieldMetadataUniversalIdentifier": Any<String>,
          "isActive": true,
          "isSystemSideEffect": true,
          "isVisible": true,
          "position": 4,
          "size": 180,
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
          "viewFieldGroupUniversalIdentifier": null,
          "viewUniversalIdentifier": Any<String>,
        },
        "metadataName": "viewField",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "canAccessAllTools": false,
          "canBeAssignedToAgents": true,
          "canBeAssignedToApiKeys": true,
          "canBeAssignedToUsers": true,
          "canDestroyAllObjectRecords": false,
          "canReadAllObjectRecords": false,
          "canSoftDeleteAllObjectRecords": false,
          "canUpdateAllObjectRecords": false,
          "canUpdateAllSettings": false,
          "createdAt": Any<String>,
          "description": "A test role",
          "icon": null,
          "isEditable": true,
          "label": "Test Role",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "role",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "content": "# Test Skill

This is a test skill.",
          "createdAt": Any<String>,
          "description": "A skill for testing",
          "icon": "IconBrain",
          "isActive": true,
          "isCustom": false,
          "label": "Test Skill",
          "name": "test-skill",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "skill",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "defaultTabToFocusOnMobileAndSidePanelUniversalIdentifier": null,
          "deletedAt": null,
          "isSystemSideEffect": true,
          "name": "Default Ticket Layout",
          "objectMetadataUniversalIdentifier": Any<String>,
          "type": "RECORD_PAGE",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "pageLayout",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "icon": "IconHome",
          "isActive": true,
          "isSystemSideEffect": true,
          "layoutMode": "VERTICAL_LIST",
          "overrides": null,
          "pageLayoutUniversalIdentifier": Any<String>,
          "position": 10,
          "title": "Home",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "pageLayoutTab",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "icon": "IconTimelineEvent",
          "isActive": true,
          "isSystemSideEffect": true,
          "layoutMode": "CANVAS",
          "overrides": null,
          "pageLayoutUniversalIdentifier": Any<String>,
          "position": 20,
          "title": "Timeline",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "pageLayoutTab",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "icon": "IconCheckbox",
          "isActive": true,
          "isSystemSideEffect": true,
          "layoutMode": "CANVAS",
          "overrides": null,
          "pageLayoutUniversalIdentifier": Any<String>,
          "position": 30,
          "title": "Tasks",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "pageLayoutTab",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "icon": "IconNotes",
          "isActive": true,
          "isSystemSideEffect": true,
          "layoutMode": "CANVAS",
          "overrides": null,
          "pageLayoutUniversalIdentifier": Any<String>,
          "position": 40,
          "title": "Notes",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "pageLayoutTab",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "createdAt": Any<String>,
          "deletedAt": null,
          "icon": "IconPaperclip",
          "isActive": true,
          "isSystemSideEffect": true,
          "layoutMode": "CANVAS",
          "overrides": null,
          "pageLayoutUniversalIdentifier": Any<String>,
          "position": 50,
          "title": "Files",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
        },
        "metadataName": "pageLayoutTab",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "conditionalAvailabilityExpression": null,
          "conditionalDisplay": null,
          "createdAt": Any<String>,
          "deletedAt": null,
          "gridPosition": {
            "column": 0,
            "columnSpan": 12,
            "row": 0,
            "rowSpan": 12,
          },
          "isActive": true,
          "isSystemSideEffect": true,
          "objectMetadataUniversalIdentifier": Any<String>,
          "pageLayoutTabUniversalIdentifier": Any<String>,
          "position": {
            "index": 0,
            "layoutMode": "VERTICAL_LIST",
          },
          "title": "Fields",
          "type": "FIELDS",
          "universalConfiguration": {
            "configurationType": "FIELDS",
            "newFieldDefaultVisibility": true,
            "viewUniversalIdentifier": Any<String>,
          },
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
        },
        "metadataName": "pageLayoutWidget",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "conditionalAvailabilityExpression": null,
          "conditionalDisplay": null,
          "createdAt": Any<String>,
          "deletedAt": null,
          "gridPosition": {
            "column": 0,
            "columnSpan": 12,
            "row": 0,
            "rowSpan": 6,
          },
          "isActive": true,
          "isSystemSideEffect": true,
          "objectMetadataUniversalIdentifier": Any<String>,
          "pageLayoutTabUniversalIdentifier": Any<String>,
          "position": {
            "layoutMode": "CANVAS",
          },
          "title": "Timeline",
          "type": "TIMELINE",
          "universalConfiguration": {
            "configurationType": "TIMELINE",
          },
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
        },
        "metadataName": "pageLayoutWidget",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "conditionalAvailabilityExpression": null,
          "conditionalDisplay": null,
          "createdAt": Any<String>,
          "deletedAt": null,
          "gridPosition": {
            "column": 0,
            "columnSpan": 12,
            "row": 0,
            "rowSpan": 6,
          },
          "isActive": true,
          "isSystemSideEffect": true,
          "objectMetadataUniversalIdentifier": Any<String>,
          "pageLayoutTabUniversalIdentifier": Any<String>,
          "position": {
            "layoutMode": "CANVAS",
          },
          "title": "Tasks",
          "type": "TASKS",
          "universalConfiguration": {
            "configurationType": "TASKS",
          },
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
        },
        "metadataName": "pageLayoutWidget",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "conditionalAvailabilityExpression": null,
          "conditionalDisplay": null,
          "createdAt": Any<String>,
          "deletedAt": null,
          "gridPosition": {
            "column": 0,
            "columnSpan": 12,
            "row": 0,
            "rowSpan": 6,
          },
          "isActive": true,
          "isSystemSideEffect": true,
          "objectMetadataUniversalIdentifier": Any<String>,
          "pageLayoutTabUniversalIdentifier": Any<String>,
          "position": {
            "layoutMode": "CANVAS",
          },
          "title": "Notes",
          "type": "NOTES",
          "universalConfiguration": {
            "configurationType": "NOTES",
          },
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
        },
        "metadataName": "pageLayoutWidget",
        "type": "create",
      },
      {
        "flatEntity": {
          "applicationUniversalIdentifier": Any<String>,
          "conditionalAvailabilityExpression": null,
          "conditionalDisplay": null,
          "createdAt": Any<String>,
          "deletedAt": null,
          "gridPosition": {
            "column": 0,
            "columnSpan": 12,
            "row": 0,
            "rowSpan": 6,
          },
          "isActive": true,
          "isSystemSideEffect": true,
          "objectMetadataUniversalIdentifier": Any<String>,
          "pageLayoutTabUniversalIdentifier": Any<String>,
          "position": {
            "layoutMode": "CANVAS",
          },
          "title": "Files",
          "type": "FILES",
          "universalConfiguration": {
            "configurationType": "FILES",
          },
          "universalIdentifier": Any<String>,
          "universalOverrides": null,
          "updatedAt": Any<String>,
        },
        "metadataName": "pageLayoutWidget",
        "type": "create",
      },
    ],
    "applicationUniversalIdentifier": Any<String>,
  },
}
`;
